Add Carlo Ascani to contributors

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -5,3 +5,4 @@ Andrea Stagi <a.stagi@nephila.it>
 Contributors
 ------------
 Marco Federighi <m.federighi@nephila.it>
+Carlo Ascani <c.ascani@nephila.it>
