Added myself to AUTHORS.txt.

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -6,3 +6,4 @@ Contributors
 ------------
 Marco Federighi <m.federighi@nephila.it>
 Carlo Ascani <c.ascani@nephila.it>
+Erik Westrup <erik.westrup@gmail.com>
