Add Moritz Lipp to contributors

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -4,6 +4,7 @@ Andrea Stagi <a.stagi@nephila.it>
 
 Contributors
 ------------
+Moritz Lipp <github@mlq.me>
 Marco Federighi <m.federighi@nephila.it>
 Carlo Ascani <c.ascani@nephila.it>
 Erik Westrup <erik.westrup@gmail.com>
