--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -9,3 +9,4 @@ Marco Federighi <m.federighi@nephila.it>
 Carlo Ascani <c.ascani@nephila.it>
 Erik Westrup <erik.westrup@gmail.com>
 Jordi Llonch <llonchj@gmail.com>
+Alejandro Guirao <lekumberri@gmail.com>
