--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -12,3 +12,5 @@ Alejandro Guirao <lekumberri@gmail.com>
 Jesús Espino <jespinog@gmail.com>
 Dennis Markgraf <info@dennismarkgraf.com>
 Paolo Romolini <p.romolini@nephila.it>
+Paolo Romolini <p.romolini@nephila.it>
+David Barragán Merino <david.barragan@kaleidos.net>
