--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -16,3 +16,4 @@ David Barragán Merino <david.barragan@kaleidos.net>
 Iacopo Spalletti <i.spalletti@nephila.it>
 Mustafa Furkan Kaptan <kaptanmf@gmail.com>
 Christoph Meißner <post@christophmeissner.de>
+Maxence Adnot <contact@maxenceadnot.me>
