--- a/AUTHORS
+++ b/AUTHORS
@@ -2,18 +2,23 @@ Written by
 ----------
 Andrea Stagi <a.stagi@nephila.it>
 
+Maintainer
+----------
+Iacopo Spalletti <i.spalletti@nephila.it>
+
 Contributors
 ------------
-Moritz Lipp <github@mlq.me>
-Marco Federighi <m.federighi@nephila.it>
-Erik Westrup <erik.westrup@gmail.com>
-Jordi Llonch <llonchj@gmail.com>
 Alejandro Guirao <lekumberri@gmail.com>
-Jesús Espino <jespinog@gmail.com>
-Dennis Markgraf <info@dennismarkgraf.com>
-Paolo Romolini <p.romolini@nephila.it>
-David Barragán Merino <david.barragan@kaleidos.net>
-Iacopo Spalletti <i.spalletti@nephila.it>
-Mustafa Furkan Kaptan <kaptanmf@gmail.com>
 Christoph Meißner <post@christophmeissner.de>
+Daniel Federschmidt <daniel@federschmidt.xyz>
+David Barragán Merino <david.barragan@kaleidos.net>
+Dennis Markgraf <info@dennismarkgraf.com>
+Erik Westrup <erik.westrup@gmail.com>
+Jesús Espino <jespinog@gmail.com>
+Jordi Llonch <llonchj@gmail.com>
+Marco Federighi <m.federighi@nephila.it>
 Maxence Adnot <contact@maxenceadnot.me>
+Moritz Lipp <github@mlq.me>
+Mustafa Furkan Kaptan <kaptanmf@gmail.com>
+Paolo Romolini <p.romolini@nephila.it>
+Robin Gustafsson <git@rgson.se>
