Add docs [ci skip]

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,10 @@ Written by
 ----------
 Andrea Stagi <a.stagi@nephila.it>
 
+Maintaned by
+------------
+Iacopo Spalletti <i.spalletti@nephila.it>
+
 Contributors
 ------------
 Moritz Lipp <github@mlq.me>
@@ -13,7 +17,8 @@ Jesús Espino <jespinog@gmail.com>
 Dennis Markgraf <info@dennismarkgraf.com>
 Paolo Romolini <p.romolini@nephila.it>
 David Barragán Merino <david.barragan@kaleidos.net>
-Iacopo Spalletti <i.spalletti@nephila.it>
 Mustafa Furkan Kaptan <kaptanmf@gmail.com>
 Christoph Meißner <post@christophmeissner.de>
 Maxence Adnot <contact@maxenceadnot.me>
+Robin Gustafsson <git@rgson.se>
+Daniel Federschmidt <daniel@federschmidt.xyz>
