--- a/AUTHORS
+++ b/AUTHORS
@@ -22,3 +22,4 @@ Christoph Meißner <post@christophmeissner.de>
 Maxence Adnot <contact@maxenceadnot.me>
 Robin Gustafsson <git@rgson.se>
 Daniel Federschmidt <daniel@federschmidt.xyz>
+Robert Dyer <rdyer@unl.edu>
