--- a/AUTHORS
+++ b/AUTHORS
@@ -4,7 +4,8 @@ Andrea Stagi <a.stagi@nephila.it>
 
 Maintaned by
 ------------
-Iacopo Spalletti <i.spalletti@nephila.it>
+Iacopo Spalletti <i.spalletti@nephila.digital>
+Leonardo Cavallucci <l.cavallucci@nephila.digital>
 
 Contributors
 ------------
@@ -23,3 +24,4 @@ Maxence Adnot <contact@maxenceadnot.me>
 Robin Gustafsson <git@rgson.se>
 Daniel Federschmidt <daniel@federschmidt.xyz>
 Robert Dyer <rdyer@unl.edu>
+Patrick Szczepański <p.szczepanski996@gmail.com>
