Add proxies parameter to taiga client

--- a/AUTHORS
+++ b/AUTHORS
@@ -25,3 +25,4 @@ Robin Gustafsson <git@rgson.se>
 Daniel Federschmidt <daniel@federschmidt.xyz>
 Robert Dyer <rdyer@unl.edu>
 Patrick Szczepański <p.szczepanski996@gmail.com>
+Hassen Ben Tanfous <hassen.ben-tanfous@docaposte.fr>
