Fix auth_app for modern Taiga versions (#227)

--- a/AUTHORS
+++ b/AUTHORS
@@ -26,3 +26,4 @@ Daniel Federschmidt <daniel@federschmidt.xyz>
 Robert Dyer <rdyer@unl.edu>
 Patrick Szczepański <p.szczepanski996@gmail.com>
 Hassen Ben Tanfous <hassen.ben-tanfous@docaposte.fr>
+Melissa Eckardt <melissa.eckardt@gdata-adan.de>
